--- a/WeCrowd/Base.lproj/Main.storyboard
+++ b/WeCrowd/Base.lproj/Main.storyboard
@@ -254,10 +254,10 @@
             </objects>
             <point key="canvasLocation" x="857" y="649"/>
         </scene>
-        <!--View Controller-->
+        <!--Campaign Detail View Controller-->
         <scene sceneID="YBY-K7-UZU">
             <objects>
-                <viewController id="YAU-Pu-HJg" sceneMemberID="viewController">
+                <viewController id="YAU-Pu-HJg" customClass="WCCampaignDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RIa-K6-i8G"/>
                         <viewControllerLayoutGuide type="bottom" id="jdk-S0-2oS"/>
@@ -272,14 +272,25 @@
                                     <constraint firstAttribute="height" constant="80" id="tt6-8H-GXh"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eyv-nM-DaV">
+                                <rect key="frame" x="275" y="184" width="51" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="p0b-nd-NlA" firstAttribute="leading" secondItem="xU8-e1-N3Z" secondAttribute="leadingMargin" constant="8" id="Gs7-rM-X1X"/>
+                            <constraint firstAttribute="centerX" secondItem="eyv-nM-DaV" secondAttribute="centerX" id="eem-24-ect"/>
                             <constraint firstItem="p0b-nd-NlA" firstAttribute="top" secondItem="RIa-K6-i8G" secondAttribute="bottom" constant="8" id="gig-77-YOH"/>
+                            <constraint firstItem="eyv-nM-DaV" firstAttribute="top" secondItem="p0b-nd-NlA" secondAttribute="bottom" constant="32" id="gpK-Jj-8aQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="p0b-nd-NlA" secondAttribute="trailing" constant="8" id="wtb-6W-BXh"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="campaignTitle" destination="eyv-nM-DaV" id="vID-wS-5av"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aHU-tn-aNc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
