--- a/WeCrowd/Base.lproj/Main.storyboard
+++ b/WeCrowd/Base.lproj/Main.storyboard
@@ -254,7 +254,7 @@
             </objects>
             <point key="canvasLocation" x="857" y="649"/>
         </scene>
-        <!--Campaign Detail View Controller-->
+        <!--Campaign Title-->
         <scene sceneID="YBY-K7-UZU">
             <objects>
                 <viewController id="YAU-Pu-HJg" customClass="WCCampaignDetailViewController" sceneMemberID="viewController">
@@ -284,6 +284,13 @@
                                 <color key="textColor" red="0.32944389025926246" green="0.80239898989898983" blue="0.38134143433148898" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NdA-dh-KhA">
+                                <rect key="frame" x="217" y="236" width="167" height="41"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <state key="normal" title="Donate/Accept">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -291,11 +298,14 @@
                             <constraint firstItem="qzu-zN-Kqv" firstAttribute="top" secondItem="p0b-nd-NlA" secondAttribute="bottom" constant="16" id="CQR-8t-Qak"/>
                             <constraint firstItem="p0b-nd-NlA" firstAttribute="leading" secondItem="xU8-e1-N3Z" secondAttribute="leadingMargin" constant="8" id="Gs7-rM-X1X"/>
                             <constraint firstAttribute="centerX" secondItem="L3o-q2-7XQ" secondAttribute="centerX" id="PdG-RH-qw9"/>
+                            <constraint firstAttribute="centerX" secondItem="NdA-dh-KhA" secondAttribute="centerX" id="Pxb-Tg-0Ga"/>
                             <constraint firstAttribute="centerX" secondItem="qzu-zN-Kqv" secondAttribute="centerX" id="dgc-n0-CUw"/>
                             <constraint firstItem="p0b-nd-NlA" firstAttribute="top" secondItem="RIa-K6-i8G" secondAttribute="bottom" constant="8" id="gig-77-YOH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="p0b-nd-NlA" secondAttribute="trailing" constant="8" id="wtb-6W-BXh"/>
+                            <constraint firstItem="NdA-dh-KhA" firstAttribute="top" secondItem="L3o-q2-7XQ" secondAttribute="bottom" constant="16" id="xrY-Vc-YRG"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Campaign Title" id="M3Z-JP-Zxp"/>
                     <connections>
                         <outlet property="campaignDescription" destination="qzu-zN-Kqv" id="Ny5-wP-uFw"/>
                         <outlet property="campaignDonationProgress" destination="L3o-q2-7XQ" id="4OY-9h-lN0"/>
