--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -17,30 +17,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a donation amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="SvR-6H-qBO">
-                                <rect key="frame" x="134" y="28" width="333" height="29"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a donation amount" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="SvR-6H-qBO">
+                                <rect key="frame" x="16" y="36" width="568" height="22"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <color key="textColor" red="1" green="0.38665899170000001" blue="0.2383080414" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swiper Status" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cN-fJ-skt">
-                                <rect key="frame" x="16" y="79" width="568" height="29"/>
+                                <rect key="frame" x="16" y="74" width="568" height="29"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="aff-pR-Ufo">
-                                <rect key="frame" x="282" y="160" width="37" height="37"/>
+                                <rect key="frame" x="282" y="155" width="37" height="37"/>
                                 <color key="color" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOE-Kh-Wj0">
-                                <rect key="frame" x="36" y="123" width="12" height="24"/>
+                                <rect key="frame" x="36" y="118" width="12" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <color key="textColor" red="0.32944389029999999" green="0.80239898990000003" blue="0.3813414343" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Donation Amount" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w0T-Ke-GEe">
-                                <rect key="frame" x="56" y="120" width="508" height="30"/>
+                                <rect key="frame" x="56" y="115" width="508" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="134" id="Um0-Q5-JoP"/>
                                 </constraints>
@@ -53,7 +53,7 @@
                                 </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GIa-eQ-G72">
-                                <rect key="frame" x="271" y="162" width="58" height="34"/>
+                                <rect key="frame" x="271" y="157" width="58" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Submit">
                                     <color key="titleColor" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
@@ -69,10 +69,12 @@
                         <constraints>
                             <constraint firstItem="5cN-fJ-skt" firstAttribute="trailing" secondItem="Q7f-0A-JRq" secondAttribute="trailingMargin" id="6nD-2Q-3Ev"/>
                             <constraint firstItem="QOE-Kh-Wj0" firstAttribute="leading" secondItem="Q7f-0A-JRq" secondAttribute="leadingMargin" constant="20" id="Ltg-Um-No1"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="SvR-6H-qBO" secondAttribute="trailing" id="N1C-HC-W6v"/>
                             <constraint firstAttribute="centerY" secondItem="w0T-Ke-GEe" secondAttribute="centerY" constant="162" id="OpY-BP-3AY"/>
-                            <constraint firstItem="5cN-fJ-skt" firstAttribute="top" secondItem="SvR-6H-qBO" secondAttribute="bottom" constant="22" id="Oyb-Ju-WNu"/>
+                            <constraint firstItem="5cN-fJ-skt" firstAttribute="top" secondItem="SvR-6H-qBO" secondAttribute="bottom" constant="16" id="Oyb-Ju-WNu"/>
                             <constraint firstItem="GIa-eQ-G72" firstAttribute="top" secondItem="w0T-Ke-GEe" secondAttribute="bottom" constant="12" id="Uau-KM-eDg"/>
                             <constraint firstItem="QOE-Kh-Wj0" firstAttribute="centerY" secondItem="w0T-Ke-GEe" secondAttribute="centerY" id="UvA-Qb-HCV"/>
+                            <constraint firstItem="SvR-6H-qBO" firstAttribute="leading" secondItem="Q7f-0A-JRq" secondAttribute="leadingMargin" id="WLH-aB-AVu"/>
                             <constraint firstItem="5cN-fJ-skt" firstAttribute="leading" secondItem="Q7f-0A-JRq" secondAttribute="leadingMargin" id="Xca-8e-xbZ"/>
                             <constraint firstItem="w0T-Ke-GEe" firstAttribute="leading" secondItem="QOE-Kh-Wj0" secondAttribute="trailing" constant="8" id="cHh-GB-1jq"/>
                             <constraint firstItem="GIa-eQ-G72" firstAttribute="centerY" secondItem="aff-pR-Ufo" secondAttribute="centerY" id="fof-tA-Aqv"/>
@@ -80,13 +82,14 @@
                             <constraint firstAttribute="trailingMargin" secondItem="w0T-Ke-GEe" secondAttribute="trailing" constant="20" id="gUd-W1-Z8I"/>
                             <constraint firstItem="GIa-eQ-G72" firstAttribute="centerX" secondItem="aff-pR-Ufo" secondAttribute="centerX" id="iAf-6G-IzD"/>
                             <constraint firstAttribute="centerX" secondItem="SvR-6H-qBO" secondAttribute="centerX" id="qKq-Gv-LqX"/>
-                            <constraint firstItem="SvR-6H-qBO" firstAttribute="top" secondItem="T0T-zz-vQr" secondAttribute="bottom" constant="8" id="rPF-vw-hXt"/>
+                            <constraint firstItem="SvR-6H-qBO" firstAttribute="top" secondItem="T0T-zz-vQr" secondAttribute="bottom" constant="16" id="rPF-vw-hXt"/>
                             <constraint firstItem="w0T-Ke-GEe" firstAttribute="top" secondItem="5cN-fJ-skt" secondAttribute="bottom" constant="12" id="t9S-NX-NdV"/>
                             <constraint firstItem="aff-pR-Ufo" firstAttribute="top" secondItem="GIa-eQ-G72" secondAttribute="bottom" constant="8" id="zpH-Vb-vPO"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="OpY-BP-3AY"/>
+                                <exclude reference="qKq-Gv-LqX"/>
                                 <exclude reference="zpH-Vb-vPO"/>
                             </mask>
                         </variation>
